--- a/index.html
+++ b/index.html
@@ -9,7 +9,25 @@
     <title>Jay - Social media Influencer</title>
 </head>
 <body>
-    hello
+    <nav>
+        <div class="navTop">
+            <div class="navItem">
+                <img src="./img/2adidas.jpg" height="40" width="100" alt="">
+            </div>
+            <div class="navItem">
+                <div class="search">
+                    <input type="text" placeholder="search..." class="searchInput">
+                    <img src="./img/1Nike.jpeg" width="20" height="20" alt="">
+                </div>
+            </div>
+            <div class="navItem">
+                <span class="limitedffer">Limited Offer</span>
+            </div>
+        </div>
+        <div class="navBottom">
+
+        </div>
+    </nav>
     
 </body>
 </html>
