done with the navbar

--- a/index.html
+++ b/index.html
@@ -7,27 +7,41 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700&family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Jay - Social media Influencer</title>
+
+     <!-- Font aweseome cdn link  -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
-    <nav>
-        <div class="navTop">
-            <div class="navItem">
-                <img src="./img/2adidas.jpg" height="40" width="100" alt="">
-            </div>
-            <div class="navItem">
-                <div class="search">
-                    <input type="text" placeholder="search..." class="searchInput">
-                    <img src="./img/1Nike.jpeg" width="20" height="20" alt="">
-                </div>
-            </div>
-            <div class="navItem">
-                <span class="limitedffer">Limited Offer</span>
-            </div>
-        </div>
-        <div class="navBottom">
 
-        </div>
-    </nav>
-    
+  <!-- Navbar section starts  -->
+
+  <section id="header">
+    <a href="#"><img src="./img/1Nike.jpeg" class="logo" height="20" width="40" alt=""></a>
+
+    <div>
+        <ul id="navbar">
+            <li><a class="active" href="./index.html">Home</a></li>
+            <li><a href="./product.html">Get Card</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+            <li><a href="./cart.html"><i class="fas fa-shopping-bag"></i></a></li>
+            <!--  -->
+        </ul>
+    </div>
+
+
+
+
+  </section>
+
+
+
+
+    <!-- Navbar section ends  -->
+
+   
+
+
+
+    <script src="./js/scripts.js"></script>
 </body>
 </html>
