done with the banner image section

--- a/index.html
+++ b/index.html
@@ -33,12 +33,21 @@
 
   </section>
 
-
-
-
     <!-- Navbar section ends  -->
 
-   
+    <!-- The banner image & text section starts -->
+
+    <section id="hero">
+        <h6>WHAT I DO</h6>
+        <h2>Making your <br> Brand Stand Out </h2>
+        <h1> Among competitors</h1>
+        <p>Are you an SME or a BIG business? Jay influence is here for you</p>
+        <button>Get a card now</button>
+    </section>
+    
+
+    <!-- The banner image & text section ends -->
+
 
 
 
