done with the first slider: showing reviews

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
      <!-- Font aweseome cdn link  -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+
+     <!-- swiper top link  -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
 </head>
 <body>
 
@@ -48,6 +51,84 @@
 
     <!-- The banner image & text section ends -->
 
+
+    <!-- The swiper section starts  -->
+
+    <section id="review" class="review">
+        <div class="heading"> <br>
+            <h2>Actions speaks louder than words</h2>
+        </div>
+
+        <div class="swiper review-slider">
+
+            <div class="swiper-wrapper">
+
+                <div class="swiper-slide box"> <br>
+                    <img src="./img/6blkZOOM.jpeg" alt="customer reviews">
+                    <p>I only needed help with my contents and you really did mentor me in a great way and I am so grateful to you, Thankfully you don't charge a dime for mentoring</p>
+                    <h4>Gideon Makinde</h4>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                </div>
+
+                <div class="swiper-slide box"> <br>
+                    <img src="./img/4red.jpeg" alt="customer reviews">
+                    <p>Jay is a really great guy no joke right now, with all of my years as a CEO and I've worked with a lot of so called Influencers but Jay really stands out among them all</p>
+                    <h4>CEO newBrim</h4>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                </div>
+
+                <div class="swiper-slide box"> <br>
+                    <img src="./img/3WhiteRockandRole.jpg" alt="customer reviews">
+                    <p>I give three gbosa's to Jay for his amazing Job with our brand,he took our brand like it was his from day one. We still even work together </p>
+                    <h4>Omen's Exotics</h4>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                </div>
+
+                <div class="swiper-slide box"> <br>
+                    <img src="./img/1Nike.jpeg" alt="customer reviews">
+                    <p>I cannot lie the first time I saw Jay, I never even thought he could influence anything at all but I would admit I was confused at how he did his things</p>
+                    <h4>CEO Revena Household</h4>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
+
+
+
+    <!-- The swiper section starts  -->
+
+
+    <!-- swiper bottom link  -->
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 
 
 
