--- a/index.html
+++ b/index.html
@@ -161,16 +161,45 @@
     
     </section>
 
+    <!-- The get to know Jay section ends  -->
+
+    
+    <!-- The brand experience section starts -->
+
+    <section id="experience">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6">
+                    <p>Let me give your brand the</p>
+                    <h2>Best Experience</h2>
+
+                    <div class="jayWork">
+                        <h4>Promotion</h4>
+                        <p>I can help you reach your target customers by promoting your business page, your company's page or even your personal page via my own social media pages.</p>
+                    </div>
+                    <div class="jayWork">
+                        <h4>Advertisement</h4>
+                        <p>I would help you advertise your products and with my experience and social media presence you would definitely get a ton of positive result and you will also see changes.</p>
+                    </div>
+                    <div class="jayWork">
+                        <h4>Influencing</h4>
+                        <p>I can also influence your brand for any length of time you want me to. I can influence your brand for a month, a year or even a day; it all depends on you and how long you want it.</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6">
+                    <img src="./img/4red.jpeg" width="100%" height="630px" alt="">
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
+    <!-- The brand experience section ends -->
 
 
 
-
-
-
-
-
-
-    <!-- The get to know Jay section starts  -->
 
 
 
