making website fully responsive

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h2>Making your <br> Brand Stand Out </h2>
         <h1> Among competitors</h1>
         <p>Are you an SME or a BIG business? Jay influence is here for you</p>
-        <button>Get a card now</button>
+        <a href="./product.html"><button>Get a card now</button></a>
     </section>
 
 
@@ -153,13 +153,13 @@
 
                     <div class="knowJay">
                         <h4><i class="fas fa-users"></i> Social media Influencer</h4>
-                        <p>I am a well social media and with a vast amount of audience I can eaily help you out on
+                        <p>I am a well known social media and with a vast amount of audience I can easily help you out on
                             social media to get your brand name out there, or to even promote your music or your
-                            upcoming event</p>
+                            upcoming events</p>
                     </div>
                     <div class="knowJay">
                         <h4><i class="fas fa-microphone"></i> Host</h4>
-                        <p>I am also a host, I host different typesof events from Birthday Parties, Get together,
+                        <p>I am also a host, I host different types of events from Birthday Parties, Get together,
                             Listening Parties and so much more. I am not new to the Entertainment industry I've been
                             here for a while and I'm here to stay</p>
                     </div>
@@ -227,7 +227,7 @@
 
 
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <img src="./img/freeDelivery.jpg" width="100%" height="200px" alt="brands">
+                    <img src="./img/soulMate Logo.png" width="100%" height="200px" alt="brands">
 
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
@@ -248,9 +248,32 @@
     </section>
 
 
+    <!-- The few brand section ends  -->
 
 
-    <!-- The few brand section starts  -->
+
+
+    <!-- The still in doubt section starts  -->
+
+
+    <section id="doubt">
+
+    </section>
+
+
+
+
+
+
+
+
+    <!-- The still in doubt section ends  -->
+
+
+
+
+
+
 
 
 
