done with the doubt section

--- a/index.html
+++ b/index.html
@@ -256,13 +256,74 @@
     <!-- The still in doubt section starts  -->
 
 
-    <section id="doubt">
+    
+    <section id="doubt" class="review">
+        <div class="brandTalk2">
+            <p>STILL IN DOUBT?.</p>
+            <h1><span>What Companies</span> <br>  I've been an <br> ambassador for say </h1>
+        </div>
+
+        <div class="swiper review-slider">
+
+            <div class="swiper-wrapper">
+
+                <div class="swiper-slide box"> <br>
+                    <img src="./img/pic-4.png" alt="customer reviews">
+                    <p>What can a big brand like Konga expect from an influencer, a lot lot more if that influencer is Jay. You are definitely a family member of the entire Konga.com squad</p>
+                    <h4>CEO Konga.com</h4>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                </div>
+
+                <div class="swiper-slide box"> <br>
+                    <img src="./img/m&blogo.jpg" alt="customer reviews">
+                    <p>I remember the first day my marketing Team saw you and they said you were full of potential, I didn't believe it until I saw it myself. When you hear of great Influencer's, Jay is on that list</p>
+                    <h4>CEO M&B Ltd.</h4>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                </div>
+
+                <div class="swiper-slide box"> <br>
+                    <img src="./img/pic-2.png" alt="customer reviews">
+                    <p>I really love what you do, at the board we first decided to give you a One year ambassador deal, we thought it was a bad investment but it wasn't. Thanks a lot </p>
+                    <h4>Hr Guiness</h4>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                </div>
+
+                <div class="swiper-slide box"> <br>
+                    <img src="./img/pic-3.png" alt="customer reviews">
+                    <p>I've always known Influencer's to be less when it comes to working on a brand but you Jay was exceptional. Great work my Man. You're always welcome @Raviga</p>
+                    <h4>CEO Raviga</h4>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
 
     </section>
-
-
-
-
 
 
 
