done with the deal section

--- a/index.html
+++ b/index.html
@@ -333,6 +333,28 @@
 
 
 
+    <!-- The let's make a deal section starts  -->
+
+    <section id="deal">
+         
+                <div class="col-md-12 bg-dark"> <br>
+                    <p>Convinced Enough?</p>
+                    <h2>Let us <br> Have a deal.</h2>
+
+                    <button class="butnn"><a href="./product.html">CLICK HERE</a></button>
+                </div>
+
+    </section>
+
+
+
+
+
+    <!-- The let's make a deal section starts  -->
+
+
+
+
 
 
 
