done with the contact links section

--- a/index.html
+++ b/index.html
@@ -347,11 +347,26 @@
     </section>
 
 
+    <!-- The let's make a deal section ends  -->
 
 
 
-    <!-- The let's make a deal section starts  -->
 
+    <!-- The first contact links section starts  -->
+
+    <div id="contact">
+        <div class="contactLinks"> <br>
+            <i class="fas fa-instagram"><a href="https://www.instagram.com/emmanuel.9944/">Insta</a></i>
+        <i class="fas fa-linkedin"><a href="https://www.instagram.com/emmanuel.9944/">Twitter</a></i>
+        <i class="fas fa-twitter"><a href="https://www.instagram.com/emmanuel.9944/">Linkedin</a></i> 
+        </div> <br>
+        hola soy 
+    </div>
+
+
+
+    
+    <!-- The first contact links section starts  -->
 
 
 
