done all the Products, renaining a Cart

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
         <div class="box-container"> 
             <div class="box">
                 <h2>Jay Influence</h2>
-                <p>A well known Social media Influencer, <br> Host and Mentor</p>
+                <h6>A well known Social media Influencer, <br> Host and Mentor</h6>
 
                 <img src="./img/payment.png" alt="">
             </div>
