--- a/product.html
+++ b/product.html
@@ -42,7 +42,7 @@
                             <img src="./img/3WhiteRockandRole.jpg" alt="" class="cart-img" >
                             <div class="detail-box">
                                 <div class="cart-product-title">A Month Music Promotion</div>
-                                <div class="cart-price">₦1,200,000</div>
+                                <div class="cart-price">₦1200000.20</div>
                                 <input type="number" value="1" class="cart-quantity">
                             </div>
                             <!-- Remove Cart -->
@@ -52,7 +52,7 @@
                     <!-- Total -->
                     <div class="total">
                         <div class="total-title">Total</div>
-                        <div class="total-price">₦0</div>
+                        <div class="total-price">₦</div>
                     </div>
                     <!-- Buy Button -->
                     <button type="button" class="btn-buy">Buy Now</button>
@@ -104,155 +104,185 @@
 
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
 
-                    <a href=""><img src="./img/2adidas.jpg" alt="Products" width="100%" height="430px"></a>
+                    <a href=""><img src="./img/2adidas.jpg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
-                        <h4>Client Content Post on Page</h4>
+                        <h4 class="product-title">Client Content Post on Page</h4>
                         <p>ADVERT</p>
                         <hr>
-                        <h6>₦250,000.00</h6>
+                        <h6 class="price">₦250,000.00</h6>
                         <span></span>
                         <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/3WhiteRockandRole.jpg" alt="Products" width="100%" height="430px"></a>
+                    <a href=""><img src="./img/3WhiteRockandRole.jpg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
-                        <h4>My Content on Story</h4>
+                        <h4 class="product-title">My Content on Story</h4>
                         <p>ADVERT</p>
                         <hr>
-                        <h6>₦150,000.00</h6>
+                        <h6 class="price">₦150,000.00</h6>
+                        <span></span>
+                        <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/2NEWSWAGY.jpeg" alt="Products" width="100%" height="430px"></a>
+                    <a href=""><img src="./img/2NEWSWAGY.jpeg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
-                        <h4>Insta Story</h4>
+                        <h4 class="product-title">Insta Story</h4>
                         <p>ADVERT</p>
                         <hr>
-                        <h6>₦40,000.00</h6>
+                        <h6 class="price">₦40,000.00</h6>
+                        <span></span>
+                        <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/1Nike.jpeg" alt="Products" width="100%" height="430px"></a>
+                    <a href=""><img src="./img/1Nike.jpeg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
-                        <h4>My Video/Picture Content on <br> Page</h4>
+                        <h4 class="product-title">My Video/Picture Content on <br> Page</h4>
                         <p>ADVERT</p>
                         <hr>
-                        <h6>₦370,000.00</h6>
+                        <h6 class="price">₦370,000.00</h6>
+                        <span></span>
+                        <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
 
 
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/2adidas.jpg" alt="Products" width="100%" height="430px"></a>
+                    <a href=""><img src="./img/2adidas.jpg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
-                        <h4>A Post wearing any of your <br> Products</h4>
+                        <h4 class="product-title">A Post wearing any of your <br> Products</h4>
                         <p>ADVERT,INFLUENCING</p>
                         <hr>
-                        <h6>₦100,000.00</h6>
+                        <h6 class="price">₦100,000.00</h6>
+                        <span></span>
+                        <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/3WhiteRockandRole.jpg" alt="Products" width="100%" height="430px"></a>
+                    <a href=""><img src="./img/3WhiteRockandRole.jpg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
-                        <h4>Campaign Shoot(Video/Photo)</h4>
+                        <h4 class="product-title">Campaign Shoot(Video/Photo)</h4>
                         <p>INFLUENCING</p>
                         <hr>
-                        <h6>₦500,000.00</h6>
+                        <h6 class="price">₦500,000.00</h6>
+                        <span></span>
+                        <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/2NEWSWAGY.jpeg" alt="Products" width="100%" height="430px"></a>
+                    <a href=""><img src="./img/2NEWSWAGY.jpeg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
-                        <h4>Snap Story Advert</h4>
+                        <h4 class="product-title">Snap Story Advert</h4>
                         <p>ADVERT</p>
                         <hr>
-                        <h6>₦30,000.00</h6>
+                        <h6 class="price">₦30,000.00</h6>
+                        <span></span>
+                        <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/1Nike.jpeg" alt="Products" width="100%" height="430px"></a>
+                    <a href=""><img src="./img/1Nike.jpeg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
-                        <h4>Snapchat 1 month influencing <br> (First Package)</h4>
+                        <h4 class="product-title">Snapchat 1 month influencing <br> (First Package)</h4>
                         <p>ADVERT</p>
                         <hr>
-                        <h6>₦700,000.00</h6>
+                        <h6 class="price">₦700,000.00</h6>
+                        <span></span>
+                        <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
 
 
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/2adidas.jpg" alt="Products" width="100%" height="430px"></a>
+                    <a href=""><img src="./img/2adidas.jpg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
-                        <h4>Twitter 1 week </h4>
+                        <h4 class="product-title">Twitter 1 week </h4>
                         <p>ADVERT,INFLUENCING,PROMOTION</p>
                         <hr>
-                        <h6>₦100,000.00</h6>
+                        <h6 class="price">₦100,000.00</h6>
+                        <span></span>
+                        <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/3WhiteRockandRole.jpg" alt="Products" width="100%" height="430px"></a>
+                    <a href=""><img src="./img/3WhiteRockandRole.jpg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
-                        <h4>Twitter 1 day(2-3 tweets)</h4>
+                        <h4 class="product-title">Twitter 1 day(2-3 tweets)</h4>
                         <p>ADVERT,INFLUENCING,PROMOTION</p>
                         <hr>
-                        <h6>₦24,000.00</h6>
+                        <h6 class="price">₦24,000.00</h6>
+                        <span></span>
+                        <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/2NEWSWAGY.jpeg" alt="Products" width="100%" height="430px"></a>
+                    <a href=""><img src="./img/2NEWSWAGY.jpeg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
-                        <h4>1 Month Influencing Package</h4>
+                        <h4 class="product-title">1 Month Influencing Package</h4>
                         <p>INFLUENCING</p>
                         <hr>
-                        <h6>₦750,000.00</h6>
+                        <h6 class="price">₦750,000.00</h6>
+                        <span></span>
+                        <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/1Nike.jpeg" alt="Products" width="100%" height="430px"></a>
+                    <a href=""><img src="./img/1Nike.jpeg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
-                        <h4>Snapchat 1 month influencing <br>(Second Package)</h4>
+                        <h4 class="product-title">Snapchat 1 month influencing <br>(Second Package)</h4>
                         <p>ADVERT</p>
                         <hr>
-                        <h6>₦650,000.00</h6>
+                        <h6 class="price">₦650,000.00</h6>
+                        <span></span>
+                        <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
 
 
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/2adidas.jpg" alt="Products" width="100%" height="430px"></a>
+                    <a href=""><img src="./img/2adidas.jpg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
-                        <h4>A month Music Promotion</h4>
+                        <h4 class="product-title">A month Music Promotion</h4>
                         <p>PROMOTION</p>
                         <hr>
-                        <h6>₦1,200,000.00</h6>
+                        <h6 class="price">₦1,200,000.00</h6>
+                        <span></span>
+                        <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/3WhiteRockandRole.jpg" alt="Products" width="100%" height="430px"></a>
+                    <a href=""><img src="./img/3WhiteRockandRole.jpg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
-                        <h4>Music Promotion(TikTok)</h4>
+                        <h4 class="product-title">Music Promotion(TikTok)</h4>
                         <p>PROMOTION</p>
                         <hr>
-                        <h6>₦80,000.00</h6>
+                        <h6 class="price">₦80,000.00</h6>
+                        <span></span>
+                        <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/2NEWSWAGY.jpeg" alt="Products" width="100%" height="430px"></a>
+                    <a href=""><img src="./img/2NEWSWAGY.jpeg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
-                        <h4>Music Promotion(Triller)</h4>
+                        <h4 class="product-title">Music Promotion(Triller)</h4>
                         <p>PROMOTION</p>
                         <hr>
-                        <h6>₦50,000.00</h6>
+                        <h6 class="price">₦50,000.00</h6>
+                        <span></span>
+                        <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/1Nike.jpeg" alt="Products" width="100%" height="430px"></a>
+                    <a href=""><img src="./img/1Nike.jpeg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
-                        <h4>Music Promotion(Instagram)</h4>
+                        <h4 class="product-title">Music Promotion(Instagram)</h4>
                         <p>PROMOTION</p>
                         <hr>
-                        <h6>₦350,000.00</h6>
+                        <h6 class="price">₦350,000.00</h6>
+                        <span></span>
+                        <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
 
