done with the add to cart and buy buttons

--- a/product.html
+++ b/product.html
@@ -76,7 +76,7 @@
 
     <div id="info">
         <div class="info container rounded"> <br>
-            <p><i class="fas fa-info"></i> Click on the service Image/Cart to add service to your cart for Payment</p>
+            <p><i class="fas fa-info"></i> Click on the service Cart to add service to your cart for Payment</p>
         </div>
     </div>
 
