--- a/index.html
+++ b/index.html
@@ -24,16 +24,33 @@
 
     <!-- Navbar section starts  -->
 
+   
     <section id="header">
         <a href="#"><img src="./img/1Nike.jpeg" class="logo" height="20" width="40" alt=""></a>
 
         <div>
             <ul id="navbar">
                 <li><a class="active" href="./index.html">Home</a></li>
-                <li><a href="./product.html">Get Card</a></li>
+                <li><a  href="./product.html">Get Card</a></li>
                 <li><a href="./contact.html">Contact</a></li>
-                <li><a href="./cart.html"><i class="fas fa-shopping-bag"></i></a></li>
-                <!--  -->
+                <i class="bx bx-shopping-bag" id="cart-icon">cart</i>
+                <!-- Cart -->
+                <div class="cart">
+                    <h2 class="cart-title">Your Cart</h2>
+                    <!-- Content -->
+                    <div class="cart-content">
+ 
+                    </div>
+                    <!-- Total -->
+                    <div class="total">
+                        <div class="total-title">Total</div>
+                        <div class="total-price">₦</div>
+                    </div>
+                    <!-- Buy Button -->
+                    <button type="button" class="btn-buy"><span><a href="https://www.instagram.com/emmanuel.9944/">Buy Now</a></span></button>
+                    <!-- Cart Close -->
+                    <i class="bx bx-x" id="close-cart">X</i>
+                </div>
             </ul>
         </div>
 
