--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
     <!-- swiper top link  -->
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
+    <!-- Box icons -->
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    
 </head>
 
 <body>
@@ -33,7 +36,7 @@
                 <li><a class="active" href="./index.html">Home</a></li>
                 <li><a  href="./product.html">Get Card</a></li>
                 <li><a href="./contact.html">Contact</a></li>
-                <i class="bx bx-shopping-bag" id="cart-icon">cart</i>
+                <i class="bx bx-shopping-bag" id="cart-icon"></i>
                 <!-- Cart -->
                 <div class="cart">
                     <h2 class="cart-title">Your Cart</h2>
@@ -379,11 +382,11 @@
 
     <div id="contact">
         <div class="contactLinks"> <br>
-            <i class="fas fa-instagram"><a href="https://www.instagram.com/emmanuel.9944/">Insta</a></i>
-            <i class="fas fa-linkedin"><a href="https://www.instagram.com/emmanuel.9944/">Twitter</a></i>
-            <i class="fas fa-twitter"><a href="https://www.instagram.com/emmanuel.9944/">Linkedin</a></i>
+            <i class="fab fa-instagram"><a href="https://www.instagram.com/emmanuel.9944/"></a></i>
+            <i class="fab fa-snapchat-ghost"><a href="https://www.instagram.com/emmanuel.9944/"></a></i>
+            <i class="fab fa-twitter"><a href="https://www.instagram.com/emmanuel.9944/"></a></i>
         </div> <br>
-        hola soy
+        
     </div>
 
 
@@ -412,9 +415,9 @@
                 <p><a href="./product.html" class="links">Promotion</a></p>
                 <p><a href="./contact.html" class="links">Contact</a></p>
                 <h5>Follow me</h5>
-                <i class="fas fa-instagram"><a href="https://www.instagram.com/emmanuel.9944/">Insta</a></i>
-            <i class="fas fa-linkedin"><a href="https://www.instagram.com/emmanuel.9944/">Twitter</a></i>
-            <i class="fas fa-twitter"><a href="https://www.instagram.com/emmanuel.9944/">Linkedin</a></i>
+                <i class="fab fa-instagram"><a href="https://www.instagram.com/emmanuel.9944/">Insta</a></i>
+            <i class="fab fa-snapchat-ghost"></i><a href="https://www.instagram.com/emmanuel.9944/">Twitter</a></i>
+            <i class="fab fa-twitter"><a href="https://www.instagram.com/emmanuel.9944/">Linkedin</a></i>
             </div>
         </div>
     </section>
