--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6">
-                    <img src="./img/4red.jpeg" width="100%" height="630px" alt="">
+                    <img src="./img/brandExperience.jpg" width="100%" height="630px" alt="">
                 </div>
 
             </div>
