--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     <!-- Navbar section starts  -->
 
     <section id="header">
-        <a href="#"><img src="./img/1Nike.jpeg" class="logo" height="55" width="45" alt=""></a>
+        <a href="#"><img src="./img/jayLogo.png" class="logo" height="55" width="45" alt=""></a>
 
         <div>
             <ul id="navbar">
