--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="icon" href="./img/jayLogo.png">
 
     <!-- linking jQuery  -->
     <script src="./js/jquery-3.6.0.js"></script>
@@ -32,7 +33,7 @@
 
 
     <section id="header">
-        <a href="#"><img src="./img/1Nike.jpeg" class="logo" height="55" width="45" alt=""></a>
+        <a href="#"><img src="./img/jayLogo.png" class="logo" height="55" width="45" alt=""></a>
 
         <div>
             <ul id="navbar">
