--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
             rel="stylesheet">
         <link rel="stylesheet" href="./css/bootstrap.css">
         <link rel="stylesheet" href="./css/styles.css">
+        <link rel="icon" href="./img/jayLogo.png">
 
         <!-- Linking jQuery for the scroll up button  -->
         <script src="./js/jquery-3.6.0.js"></script>
