--- a/product.html
+++ b/product.html
@@ -10,6 +10,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="icon" href="./img/jayLogo.png">
 
 
     <!-- linking jQuery: used for the scroll up button  -->
